force-app/main/default/objects/Service_Routing_Event__c/Service_Routing_Event__c.object-meta.xml
<CustomObject>
    <label>Service Routing Event</label>
    <nameField>
        <label>Event Number</label>
        <displayFormat>SRE-{00000000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Routing Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>