force-app/main/default/objects/Service_Routing_Event__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Service_Agent__c</referenceTo>
    <relationshipLabel>Routing Events</relationshipLabel>
    <relationshipName>Routing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>