force-app/main/default/objects/Service_Routing_Event__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Service_Queue__c</referenceTo>
    <relationshipLabel>Routing Events</relationshipLabel>
    <relationshipName>Routing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>