force-app/main/default/objects/Service_Routing_Event__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <label>Work Item</label>
    <deleteConstraint>Cascade</deleteConstraint>
    <referenceTo>Service_Work_Item__c</referenceTo>
    <relationshipLabel>Routing Events</relationshipLabel>
    <relationshipName>Routing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>